--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: PeerkKnights Child Theme
-Description: Child theme for PeerKnights website testing git update
+Description: Child theme for PeerKnights website testing git update in QA
 Author: Student Learning and Academic Services (SLAS)
 Theme URI: https://github.com/UCF/DirectConnectToUCF-Child-Theme.git
 Author URI: https://academicsuccess.ucf.edu/
